// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Button should render blue Button 1`] = `
<div>
  <button
    class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-fit bg-white dark:bg-slate-300"
    data-testid="default-button-test-5"
  >
    Primary
  </button>
</div>
`;

exports[`Default Button should render dark green Button 1`] = `
<div>
  <button
    class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-fit bg-white dark:bg-slate-300"
    data-testid="default-button-test-4"
  >
    Success
  </button>
</div>
`;

exports[`Default Button should render dark red Button 1`] = `
<div>
  <button
    class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-fit bg-white dark:bg-slate-300"
    data-testid="default-button-test-2"
  />
</div>
`;

exports[`Default Button should render default button when variant is null 1`] = `
<div>
  <button
    class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-fit bg-white dark:bg-slate-300"
    data-testid="default-button-test-7"
  >
    Primary
  </button>
</div>
`;

exports[`Default Button should render green Button 1`] = `
<div>
  <button
    class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-fit bg-white dark:bg-slate-300"
    data-testid="default-button-test-3"
  >
    Success
  </button>
</div>
`;

exports[`Default Button should render red Button 1`] = `
<div>
  <button
    class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-fit bg-white dark:bg-slate-300"
    data-testid="default-button-test-1"
  >
    Cancel
  </button>
</div>
`;

exports[`Default Button should render teal Button 1`] = `
<div>
  <button
    class="px-9 py-3 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-black w-fit bg-white dark:bg-slate-300"
    data-testid="default-button-test-6"
  >
    Login
  </button>
</div>
`;
